Responsive de la section Hébergement + Populaires en mode Tablette

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" type="text/css" href="reset.css" />
+    <link rel="stylesheet" type="text/css" href="reet.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -414,7 +414,7 @@
       </section>
 
       <section id="populaires">
-        <div class="title22">
+        <div class="title_les_plus_populaires">
           <h2>Les plus populaires</h2>
           <br />
           <img
@@ -426,144 +426,144 @@
         </div>
 
         <div class="trois_rectangles">
-          <div class="matin">
-            <div class="photoo">
-              <img
-                alt="photo_1"
-                src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-              />
-            </div>
-            <div class="text">
-              <span class="titre">Hôtel Le soleil du matin</span>
-              <p>Nuit à partir de 128€</p>
-              <div class="stars">
+          <a href="#">
+            <div class="matin">
+              <div class="photoo">
                 <img
-                  width="12px"
-                  alt="a-first"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-second"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-third"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-fourth"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-fifth"
-                  height="12px"
-                  src="/images_booki/composants/vectorwhitestar.png"
+                  alt="photo_1"
+                  src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                 />
               </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="trois_rectangles">
-          <div class="matin">
-            <div class="photoo">
-              <img
-                alt="photo_1"
-                src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-              />
-            </div>
-            <div class="text">
-              <span class="titre">Hôtel Le soleil du matin</span>
-              <p>Nuit à partir de 128€</p>
-              <div class="stars">
-                <img
-                  width="12px"
-                  alt="a-first"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-second"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-third"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-fourth"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-fifth"
-                  height="12px"
-                  src="/images_booki/composants/vectorwhitestar.png"
-                />
+              <div class="text">
+                <span class="titre">Hôtel Le soleil du matin</span>
+                <p>Nuit à partir de 128€</p>
+                <div class="stars">
+                  <img
+                    width="12px"
+                    alt="a-first"
+                    height="12px"
+                    src="/images_booki/composants/vectorstar.png"
+                  />
+                  <img
+                    width="12px"
+                    alt="a-second"
+                    height="12px"
+                    src="/images_booki/composants/vectorstar.png"
+                  />
+                  <img
+                    width="12px"
+                    alt="a-third"
+                    height="12px"
+                    src="/images_booki/composants/vectorstar.png"
+                  />
+                  <img
+                    width="12px"
+                    alt="a-fourth"
+                    height="12px"
+                    src="/images_booki/composants/vectorstar.png"
+                  />
+                  <img
+                    width="12px"
+                    alt="a-fifth"
+                    height="12px"
+                    src="/images_booki/composants/vectorwhitestar.png"
+                  />
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-
-        <div class="trois_rectangles">
-          <div class="matin">
-            <div class="photoo">
-              <img
-                alt="photo_1"
-                src="/images_booki/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-              />
-            </div>
-            <div class="text">
-              <span class="titre">Hôtel Le soleil du matin</span>
-              <p>Nuit à partir de 128€</p>
-              <div class="stars">
+          </a>
+          <a href="#">
+            <div class="matin">
+              <div class="photoo">
                 <img
-                  width="12px"
-                  alt="a-first"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-second"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-third"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-fourth"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-fifth"
-                  height="12px"
-                  src="/images_booki/composants/vectorwhitestar.png"
+                  alt="photo_1"
+                  src="/images_booki/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                 />
               </div>
+              <div class="text">
+                <span class="titre">Hôtel Le soleil du matin</span>
+                <p>Nuit à partir de 128€</p>
+                <div class="stars">
+                  <img
+                    width="12px"
+                    alt="a-first"
+                    height="12px"
+                    src="/images_booki/composants/vectorstar.png"
+                  />
+                  <img
+                    width="12px"
+                    alt="a-second"
+                    height="12px"
+                    src="/images_booki/composants/vectorstar.png"
+                  />
+                  <img
+                    width="12px"
+                    alt="a-third"
+                    height="12px"
+                    src="/images_booki/composants/vectorstar.png"
+                  />
+                  <img
+                    width="12px"
+                    alt="a-fourth"
+                    height="12px"
+                    src="/images_booki/composants/vectorstar.png"
+                  />
+                  <img
+                    width="12px"
+                    alt="a-fifth"
+                    height="12px"
+                    src="/images_booki/composants/vectorwhitestar.png"
+                  />
+                </div>
+              </div>
             </div>
-          </div>
+          </a>
+          <a href="#">
+            <div class="matin">
+              <div class="photoo">
+                <img
+                  alt="photo_1"
+                  src="/images_booki/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                />
+              </div>
+              <div class="text">
+                <span class="titre">Hôtel Le soleil du matin</span>
+                <p>Nuit à partir de 128€</p>
+                <div class="stars">
+                  <img
+                    width="12px"
+                    alt="a-first"
+                    height="12px"
+                    src="/images_booki/composants/vectorstar.png"
+                  />
+                  <img
+                    width="12px"
+                    alt="a-second"
+                    height="12px"
+                    src="/images_booki/composants/vectorstar.png"
+                  />
+                  <img
+                    width="12px"
+                    alt="a-third"
+                    height="12px"
+                    src="/images_booki/composants/vectorstar.png"
+                  />
+                  <img
+                    width="12px"
+                    alt="a-fourth"
+                    height="12px"
+                    src="/images_booki/composants/vectorstar.png"
+                  />
+                  <img
+                    width="12px"
+                    alt="a-fifth"
+                    height="12px"
+                    src="/images_booki/composants/vectorwhitestar.png"
+                  />
+                </div>
+              </div>
+            </div>
+          </a>
         </div>
       </section>
     </div>
