--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 
         <div class="search_button">
           <button type="submit" class="searchs">Rechercher</button>
+          <button type="submit" class="loupe">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
         </div>
       </div>
     </section>
@@ -82,45 +85,46 @@
       <div class="filter">
         <p>Filtres</p>
       </div>
+      <div class="quatre_filtres">
+        <div class="e">
+          <img
+            width="22px"
+            height="16.26px"
+            src="/images_booki/composants/vectoreconomique.png"
+            alt="eco"
+          />
+          <p>Economique</p>
+        </div>
 
-      <div class="e">
-        <img
-          width="22px"
-          height="16.26px"
-          src="/images_booki/composants/vectoreconomique.png"
-          alt="eco"
-        />
-        <p>Economique</p>
-      </div>
+        <div class="e">
+          <img
+            width="13.44px"
+            height="22px"
+            src="/images_booki/composants/vectorfamilial.png"
+            alt="familial"
+          />
+          <p>Familial</p>
+        </div>
 
-      <div class="e">
-        <img
-          width="13.44px"
-          height="22px"
-          src="/images_booki/composants/vectorfamilial.png"
-          alt="familial"
-        />
-        <p>Familial</p>
-      </div>
+        <div class="e">
+          <img
+            width="22px"
+            height="18.33px"
+            src="/images_booki/composants/vectorromantique.png"
+            alt="romantique"
+          />
+          <p>Romantique</p>
+        </div>
 
-      <div class="e">
-        <img
-          width="22px"
-          height="18.33px"
-          src="/images_booki/composants/vectorromantique.png"
-          alt="romantique"
-        />
-        <p>Romantique</p>
-      </div>
-
-      <div class="e">
-        <img
-          width="22px"
-          height="22px"
-          src="/images_booki/composants/vectoranimaux.png"
-          alt="animaux"
-        />
-        <p>Animaux autorisés</p>
+        <div class="e">
+          <img
+            width="22px"
+            height="22px"
+            src="/images_booki/composants/vectoranimaux.png"
+            alt="animaux"
+          />
+          <p>Animaux autorisés</p>
+        </div>
       </div>
     </section>
 
