remplacement des image svg en icone font awesome + qlq factorisations

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
 
           <div class="link_activités_marseilles">
-            <p><a href="#hactivités_marseilles"> Activités </a></p>
+            <p><a href="#activity_at_marseilles"> Activités </a></p>
           </div>
         </div>
       </nav>
@@ -161,36 +161,11 @@
               <span class="titre">Auberge La Canebière</span>
               <p>Nuit à partir de 25€</p>
               <div class="star">
-                <img
-                  width="12px"
-                  alt="a-first"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-second"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-third"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-fourth"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="a-fifth"
-                  height="12px"
-                  src="/images_booki/composants/vectorwhitestar.png"
-                />
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
               </div>
             </div>
           </a>
@@ -208,36 +183,11 @@
               <span class="titre">Hôtel du port</span>
               <p>Nuit à partir de 52€</p>
               <div class="star">
-                <img
-                  width="12px"
-                  alt="b-first"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-second"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-third"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-fourth"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-fifth"
-                  height="12px"
-                  src="/images_booki/composants/vectorwhitestar.png"
-                />
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
               </div>
             </div>
           </a>
@@ -254,36 +204,11 @@
               <span class="titre">Hôtel des mouettes</span>
               <p>Nuit à partir de 76€</p>
               <div class="star">
-                <img
-                  width="12px"
-                  alt="b-first"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-second"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-third"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-fourth"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-fifth"
-                  height="12px"
-                  src="/images_booki/composants/vectorwhitestar.png"
-                />
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
               </div>
             </div>
           </a>
@@ -301,36 +226,11 @@
               <span class="titre">Hôtel de la mer</span>
               <p>Nuit à partir de 46€</p>
               <div class="star">
-                <img
-                  width="12px"
-                  alt="b-first"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-second"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-third"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-fourth"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-fifth"
-                  height="12px"
-                  src="/images_booki/composants/vectorwhitestar.png"
-                />
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
               </div>
             </div>
           </a>
@@ -348,36 +248,11 @@
               <span class="titre">Auberge Le Panier</span>
               <p>Nuit à partir de 23€</p>
               <div class="star">
-                <img
-                  width="12px"
-                  alt="b-first"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-second"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-third"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-fourth"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-fifth"
-                  height="12px"
-                  src="/images_booki/composants/vectorwhitestar.png"
-                />
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
               </div>
             </div>
           </a>
@@ -395,36 +270,11 @@
               <span class="titre">Hôtel chez Amina</span>
               <p>Nuit à partir de 96€</p>
               <div class="star">
-                <img
-                  width="12px"
-                  alt="b-first"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-second"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-third"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-fourth"
-                  height="12px"
-                  src="/images_booki/composants/vectorstar.png"
-                />
-                <img
-                  width="12px"
-                  alt="b-fifth"
-                  height="12px"
-                  src="/images_booki/composants/vectorwhitestar.png"
-                />
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
               </div>
             </div>
           </a>
@@ -458,37 +308,12 @@
               <div class="text">
                 <span class="titre">Hôtel Le soleil du matin</span>
                 <p>Nuit à partir de 128€</p>
-                <div class="stars">
-                  <img
-                    width="12px"
-                    alt="a-first"
-                    height="12px"
-                    src="/images_booki/composants/vectorstar.png"
-                  />
-                  <img
-                    width="12px"
-                    alt="a-second"
-                    height="12px"
-                    src="/images_booki/composants/vectorstar.png"
-                  />
-                  <img
-                    width="12px"
-                    alt="a-third"
-                    height="12px"
-                    src="/images_booki/composants/vectorstar.png"
-                  />
-                  <img
-                    width="12px"
-                    alt="a-fourth"
-                    height="12px"
-                    src="/images_booki/composants/vectorstar.png"
-                  />
-                  <img
-                    width="12px"
-                    alt="a-fifth"
-                    height="12px"
-                    src="/images_booki/composants/vectorwhitestar.png"
-                  />
+                <div class="star">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
                 </div>
               </div>
             </div>
@@ -504,37 +329,12 @@
               <div class="text">
                 <span class="titre">Hôtel Le soleil du matin</span>
                 <p>Nuit à partir de 128€</p>
-                <div class="stars">
-                  <img
-                    width="12px"
-                    alt="a-first"
-                    height="12px"
-                    src="/images_booki/composants/vectorstar.png"
-                  />
-                  <img
-                    width="12px"
-                    alt="a-second"
-                    height="12px"
-                    src="/images_booki/composants/vectorstar.png"
-                  />
-                  <img
-                    width="12px"
-                    alt="a-third"
-                    height="12px"
-                    src="/images_booki/composants/vectorstar.png"
-                  />
-                  <img
-                    width="12px"
-                    alt="a-fourth"
-                    height="12px"
-                    src="/images_booki/composants/vectorstar.png"
-                  />
-                  <img
-                    width="12px"
-                    alt="a-fifth"
-                    height="12px"
-                    src="/images_booki/composants/vectorwhitestar.png"
-                  />
+                <div class="star">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
                 </div>
               </div>
             </div>
@@ -550,37 +350,12 @@
               <div class="text">
                 <span class="titre">Hôtel Le soleil du matin</span>
                 <p>Nuit à partir de 128€</p>
-                <div class="stars">
-                  <img
-                    width="12px"
-                    alt="a-first"
-                    height="12px"
-                    src="/images_booki/composants/vectorstar.png"
-                  />
-                  <img
-                    width="12px"
-                    alt="a-second"
-                    height="12px"
-                    src="/images_booki/composants/vectorstar.png"
-                  />
-                  <img
-                    width="12px"
-                    alt="a-third"
-                    height="12px"
-                    src="/images_booki/composants/vectorstar.png"
-                  />
-                  <img
-                    width="12px"
-                    alt="a-fourth"
-                    height="12px"
-                    src="/images_booki/composants/vectorstar.png"
-                  />
-                  <img
-                    width="12px"
-                    alt="a-fifth"
-                    height="12px"
-                    src="/images_booki/composants/vectorwhitestar.png"
-                  />
+                <div class="star">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
                 </div>
               </div>
             </div>
@@ -590,101 +365,80 @@
     </div>
 
     <!-- ACTIVITES A MARSEILLES -->
-
-    <div class="activité_title">
-      <h1>Activités à Marseilles</h1>
-    </div>
-
-    <section class="activités">
-      <div class="liens_activity">
-        <a href="#">
-          <div class="activity">
-            <div class="image">
-              <img
-                alt="photo_1"
-                src="/images_booki/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-              />
-            </div>
-
-            <div class="lieux">
-              <p>Vieux-Port</p>
-            </div>
-          </div>
-        </a>
+    <section id="activity_at_marseilles">
+      <div class="activité_title">
+        <h1>Activités à Marseilles</h1>
       </div>
 
-      <div class="liens_activity">
-        <a href="#">
-          <div class="activity">
-            <div class="image2">
-              <img
-                alt="photo_1"
-                src="/images_booki/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-              />
-            </div>
-            <div class="lieux">
-              <p>Fort de Pomègues</p>
-            </div>
-          </div>
-        </a>
-      </div>
+      <section class="activités">
+        <div class="liens_activity">
+          <a href="#">
+            <div class="activity">
+              <div class="image">
+                <img
+                  alt="photo_1"
+                  src="/images_booki/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                />
+              </div>
 
-      <div class="liens_activity">
-        <a href="#">
-          <div class="activity">
-            <div class="image">
-              <img
-                alt="photo_1"
-                src="/images_booki/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-              />
+              <div class="lieux">
+                <p>Vieux-Port</p>
+              </div>
             </div>
-            <div class="lieux">
-              <p>Parc National des Calanques</p>
-            </div>
-          </div>
-        </a>
-      </div>
+          </a>
+        </div>
 
-      <div class="liens_activity">
-        <a href="#">
-          <div class="activity">
-            <div class="image">
-              <img
-                alt="photo_1"
-                src="/images_booki/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-              />
+        <div class="liens_activity">
+          <a href="#">
+            <div class="activity">
+              <div class="image2">
+                <img
+                  alt="photo_1"
+                  src="/images_booki/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                />
+              </div>
+              <div class="lieux">
+                <p>Fort de Pomègues</p>
+              </div>
             </div>
-            <div class="lieux">
-              <p>Notre-Dame-de-la-Garde</p>
+          </a>
+        </div>
+
+        <div class="liens_activity">
+          <a href="#">
+            <div class="activity">
+              <div class="image">
+                <img
+                  alt="photo_1"
+                  src="/images_booki/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                />
+              </div>
+              <div class="lieux">
+                <p>Parc National des Calanques</p>
+              </div>
             </div>
-          </div>
-        </a>
-      </div>
+          </a>
+        </div>
+
+        <div class="liens_activity">
+          <a href="#">
+            <div class="activity">
+              <div class="image">
+                <img
+                  alt="photo_1"
+                  src="/images_booki/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                />
+              </div>
+              <div class="lieux">
+                <p>Notre-Dame-de-la-Garde</p>
+              </div>
+            </div>
+          </a>
+        </div>
+      </section>
     </section>
 
     <!-- FOOTER -->
-
-    <!-- <p></p>
-
-    <p id="demo"></p>
-    <script>
-      var w = window.innerWidth;
-      var h = window.innerHeight;
-
-      var x = document.getElementById("demo");
-      x.innerHTML = w;
-    </script>
-
-    <script>
-      function winSize() {
-        console.log(`
-Inner Width: ${this.innerWidth}
-
-`);
-      }
-
-      winSize();
-    </script> -->
 
     <script>
       window.addEventListener("resize", function (event) {
